--- a/views/my-resources.ejs
+++ b/views/my-resources.ejs
@@ -22,7 +22,7 @@
                   <thead>
                     <tr>
                       <th scope="col">Owned Resources</th>
-                      <th scope="col">Edit</th>
+                      <th scope="col"></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -35,9 +35,7 @@
                           <li>Description: <%= resource.description %></li>
                           <li>Category ID: <%= resource.category_id %></li>
                         </ul>
-                      <td><form method="GET" action="/resources/<%= resource.title %>">
-                        <button type="submit">Edit</button>
-                      </form>
+                      <td><a href="/resources/<%= resource.id %>/edit "> EDIT </a>
                     </td>
                   </tr>
                   <% } %>
@@ -49,7 +47,7 @@
               <thead>
                 <tr>
                   <th scope="col">Liked Resources</th>
-                  <th scope="col">Edit</th>
+                  <th scope="col"></th>
                 </tr>
               </thead>
               <tbody>
@@ -62,10 +60,8 @@
                       <li>Description: <%= resource.description %></li>
                       <li>Category ID: <%= resource.category_id %></li>
                     </ul>
-                  <td><form method="GET" action="/resources/<%= resource.title %>">
-                    <button type="submit">Edit</button>
-                  </form>
-                </td>
+                    <td><a href="/resources/<%= resource.id %>/edit "> EDIT </a>
+                    </td>
               </tr>
               <% } %>
         </div>
