add resourcedId to add like, comment, andrates functionality

--- a/views/resourcesId.ejs
+++ b/views/resourcesId.ejs
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Document</title>
 </head>
 <body>
+    <h1>this is the resourece page</h1>
     <% for (const item of data) {%>
     <section>
-        <div class="post-header">
+        <div class="post-header"> post header
             <div class="username-category">
                Username: <%= item.name%> ------ Topic: <%=item.topic%>
             </div>
@@ -19,19 +22,12 @@
           URL:  <%= item.url%> <br>
           Description: <%= item.description%> <br>
         </div>
-        <button>Break</button>
+        <button>comment</button>
+        <button>likes</button>
+        <button>rates</button>
         </div>
     </section>
     <%}%>
 
 </body>
 </html>
-
-<!-- {
-    id: 40,
-    owner_id: 5,
-    category_id: 5,
-    title: 'SURFING',
-    url: 'https://www.youtube.com/watch?v=ma67yOdMQfs',
-    description: 'These Were The All-Time Surfing Moments Of The Year | Best Of 2020'
-  } -->
