--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,21 +1,38 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/api">Rsources Wall</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-      </div>
-    </div>
+
+
     <% if(user){%>
       <label>logged in as <%= user %></label>
       <form method="POST" action="/api/logout">
         <button
                   type="submit">
               logout
+          </button>
+      </form>
+      <form method="" action="">
+        <button
+                  type="submit">
+              Search by Topic
+          </button>
+      </form>
+      <form method="" action="">
+        <button
+                  type="submit">
+              My Resources
+          </button>
+      </form>
+      <form method="" action="">
+        <button
+                  type="submit">
+              Create New
+          </button>
+      </form>
+      <form method="" action="">
+        <button
+                  type="submit">
+              Profile
           </button>
       </form>
 
