--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -20,7 +20,7 @@
           URL:  <%= item.url%> <br>
           Description: <%= item.description%> <br>
         </div>
-        <button>Break</button>
+        <button>More Details</button>
         </div>
     </section>
     <%}%>
