add profile route and page

--- a/views/edit-resource.ejs
+++ b/views/edit-resource.ejs
@@ -36,7 +36,7 @@
                           <li>Category: <%= topic %></li>
                         </ul>
                       </td>
-                      <form method="POST" action="/resources/<%=id %>/edit">
+                      <form method="POST" action="/api/resources/<%=id %>/edit">
                       <td>
                         <ul>
                         <li>Title:<input type="text" name="title" value="<%= title %>"> </li>
