--- a/views/my-resources.ejs
+++ b/views/my-resources.ejs
@@ -35,7 +35,7 @@
                           <li>Description: <%= resource.description %></li>
                           <li>Category ID: <%= resource.category_id %></li>
                         </ul>
-                      <td><a href="/resources/<%= resource.id %>/edit "> EDIT </a>
+                      <td><a href="/api/resources/<%= resource.id %>/edit "> EDIT </a>
                     </td>
                   </tr>
                   <% } %>
