--- a/views/resourcesId.ejs
+++ b/views/resourcesId.ejs
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="../scripts/resourcesId.js"></script>
+
     <title>Document</title>
 </head>
 <body>
-    <h1>this is the resourece page</h1>
+    <h1>this is the resourece Id page</h1>
     <% for (const item of data) {%>
-    <section>
+    <section id="resource-container">
         <div class="post-header"> post header
             <div class="username-category">
                Username: <%= item.name%> ------ Topic: <%=item.topic%>
@@ -22,10 +25,19 @@
           URL:  <%= item.url%> <br>
           Description: <%= item.description%> <br>
         </div>
-        <button>comment</button>
+        <form method="POST" action="/resources/<%= item.id%>">
+        <input name="comment" type="text" placeholder="comment">
+        <button type="submit" name="btn-comment">comment</button>
+        </form>
         <button>likes</button>
         <button>rates</button>
         </div>
+    </section>
+    <div class="rating">rating: <%= item.rating%></div>
+    <div class="comment">comment: <%= item.comment%></div>
+
+    <section>
+
     </section>
     <%}%>
 
