search by title aded

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -35,6 +35,12 @@
               Profile
           </button>
       </form>
+      <form method="GET" action="/api/title_search">
+        <button
+                  type="submit">
+              Search by Title
+          </button>
+      </form>
 
     <% } else{ %>  <a href="http://localhost:8080/api/register">go here to register</a>
     <a href="http://localhost:8080/api/login">go here to log in</a>
