--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,18 +6,18 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/profile.css">
 
     <title>My Profile</title>
   </head>
 
   <body>
-
-  <%- //include('partials/_header') %>
+    <%- include('partials/_header') %>
 
     <main>
-      <h3>My Profile</h3>
+      <h3 class='my-profile'>My Profile</h3>
       <section class="my-profile-container">
-      <div class="edit-profile">
+          <div class="edit-profile">
                 <table class="table">
                   <thead>
                     <tr>
@@ -30,24 +30,24 @@
                     <tr>
                       <td>
                         <ul>
-                          <li>Name: <%= user.name %></li>
+                          <li>Name: <%= user.name%></li>
                           <li>Email: <%= user.email%></li>
                         </ul>
                       </td>
                       <form method="POST" action="/api/profile/<%= user.id %>">
-                      <td>
+                      <td class="new-Details">
                         <ul>
                         <li>Name:<input type="text" name="name" value="<%= user.name %>"> </li>
                         <li>Email:<input type="text" name="email" value="<%= user.email%>"> </li>
                         <li>Password:<input type="password" name="password" value="<%= user.password %>"> </li>
                         </ul>
                       </td>
-                        <td><button type="submit">Edit</button></td>
+                        <td><button class="btn-edit" type="submit">Edit</button></td>
                       </form>
                     </tr>
                   </tbody>
                 </table>
-      </div>
+         </div>
       </section>
 
     </main>
