--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -4,34 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/resources.css">
+    <title>resources</title>
 </head>
 <body>
+    <%- include('partials/_header') %>
     <% for (const item of data) {%>
-    <section>
+    <section class="resource-section">
         <div class="post-header">
-            <div class="username-category">
-               Username: <%= item.name%> ------ Topic: <%=item.topic%>
-            </div>
+            <div>Username: <%= item.name%> </div>
+            <div> Category: <%=item.topic%></div>
         </div>
-        <div>
-           Title:  <%= item.title%> <br>
-          URL:  <%= item.url%> <br>
-          Description: <%= item.description%> <br>
+        <div class="body-div">
+           <div>Title:  <%= item.title%></div>
+           <div>URL:  <a class="a-url" href="<%= item.url%>"><%= item.url%> </a></div>
+          <div>Description: <%= item.description%></div>
         </div>
-        <button>More Details</button>
+        <div class="btn-div">
+             <a href="/api/resources/<%- item.id %>"><button class="btn-details">More Details </button></a>
         </div>
+
     </section>
     <%}%>
 
 </body>
 </html>
-
-<!-- {
-    id: 40,
-    owner_id: 5,
-    category_id: 5,
-    title: 'SURFING',
-    url: 'https://www.youtube.com/watch?v=ma67yOdMQfs',
-    description: 'These Were The All-Time Surfing Moments Of The Year | Best Of 2020'
-  } -->
