--- a/views/resourcesId.ejs
+++ b/views/resourcesId.ejs
@@ -8,24 +8,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="../scripts/resourcesId.js"></script>
+    <!-- <link rel="stylesheet" href="/styles/resourcesId.css"> -->
+
 
     <title>Document</title>
 </head>
 <body>
-    <h1>this is the resourece Id page</h1>
+
     <% for (const item of data) {%>
-    <section id="resource-container">
+    <section class="resource-container">
         <div class="post-header"> post header
-            <div class="username-category">
-               Username: <%= item.name%> ------ Topic: <%=item.topic%>
-            </div>
+            <div class="username-category">Username: <%= item.name%></div> Topic: <%=item.topic%>
         </div>
         <div>
            Title:  <%= item.title%> <br>
           URL:  <%= item.url%> <br>
           Description: <%= item.description%> <br>
         </div>
-        <form method="POST" action="/resources/<%= item.id%>">
+        <form method="POST" action="/api/resources/<%= item.id%>">
         <input name="comment" type="text" placeholder="comment">
         <button type="submit" name="btn-comment">comment</button>
         </form>
