--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,7 +11,7 @@
               logout
           </button>
       </form>
-      <form method="" action="">
+      <form method="GET" action="/api/topic_search">
         <button
                   type="submit">
               Search by Topic
