add css to resourceShow and fix the bug in /new route

--- a/styles/edit-resource.scss
+++ b/styles/edit-resource.scss
@@ -38,3 +38,10 @@ input {
     background-color: #f4f1ec;
     width: 520px;
 }
+// #comments{
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+
+// }
