--- a/views/resource_show.ejs
+++ b/views/resource_show.ejs
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer"  />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
   <script type="text/javascript" src="/scripts/app.js"></script>
+  <link rel="stylesheet" href="/styles/resourceShow.css">
 
   <title>Resource Show</title>
 </head>
@@ -32,7 +32,7 @@
           <li>Rate: <%= item.rating %>  </li>
         </ul>
       </div>
-      <footer>
+      <footer class="footer-icons">
         <div class="footer-display">
           <div class="icon">
             <i class="fas fa-flag"></i>
@@ -49,12 +49,12 @@
       <form id="rate-input">
         <textarea
         class="text-area"
-        placeholder="pls rate!"
+        placeholder=" rate!"
         name="rating"
         id="rating-text"
         ></textarea>
-        <div>
-          <button type="submit">submit</button>
+        <div >
+          <button class="btn-submit" type="submit">Rate</button>
         </div>
       </form>
     </section>
@@ -69,7 +69,7 @@
         id="comment-text"
         ></textarea>
         <div>
-          <button type="submit">submit</button>
+          <button class="btn-submit btn-comment" type="submit">Comment</button>
         </div>
       </form>
     </section>
