--- a/views/edit-resource.ejs
+++ b/views/edit-resource.ejs
@@ -13,6 +13,7 @@
 
   <body>
 
+    <%-include('partials/_header') %>
 
     <main>
       <h3>Resources Edit</h3>
@@ -30,18 +31,20 @@
                     <tr>
                       <td>
                         <ul>
-                          <li>Title: <%= title %></li>
-                          <li>URL: <%= url%></li>
-                          <li>Description: <%= description %></li>
-                          <li>Category: <%= topic %></li>
+                          <li>Title: <%= data.title %></li>
+                          <li>URL: <%= data.url%></li>
+                          <li>Description: <%= data.description %></li>
+                          <li>Category: <%= data.topic %></li>
                         </ul>
                       </td>
-                      <form method="POST" action="/api/resources/<%=id %>/edit">
+                      <form method="POST" action="/api/resources/<%=data.id %>/edit">
+
                       <td class="new-detail">
                         <ul>
-                        <li>Title:<input type="text" name="title" value="<%= title %>"> </li>
-                        <li>URL:<input type="text" name="url" value="<%= url%>"> </li>
-                        <li>Description:<input type="text" name="description" value="<%= description %>"> </li>
+                        <li>Title:<input type="text" name="title" value="<%= data.title %>"> </li>
+                        <li>URL:<input type="text" name="url" value="<%= data.url%>"> </li>
+                        <li>Description:<input type="text" name="description" value="<%= data.description %>"> </li>
+                        <li><input type="hidden" name="id" value="<%= data.id %>"></li>
                         </ul>
                       </td>
                       <td><button class="btn-edit" type="submit">Edit</button></td>
