--- a/views/my-resources.ejs
+++ b/views/my-resources.ejs
@@ -13,7 +13,7 @@
 
   <body>
 
-  <%- //include('partials/_header') %>
+  <%-include('partials/_header') %>
 
     <main>
       <h3>My Resources</h3>
