--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
 
   <body>
 
-    <%- include('partials/_header', {userEmail: null}) %>
+    <%- include('partials/_header', {user: null}) %>
 
     <main style="margin: 1em;">
 
