--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,19 +17,19 @@
               Search by Topic
           </button>
       </form>
-      <form method="" action="">
+      <form method="GET" action="/api/my-resources">
         <button
                   type="submit">
               My Resources
           </button>
       </form>
-      <form method="" action="">
+      <form method="GET" action="/api/resources/new">
         <button
                   type="submit">
               Create New
           </button>
       </form>
-      <form method="" action="">
+      <form method="GET" action="/api/profile">
         <button
                   type="submit">
               Profile
