--- a/styles/my-resourcesId.scss
+++ b/styles/my-resourcesId.scss
@@ -15,3 +15,15 @@ h3 {
     position: relative;
     left: 495px;
 }
+
+nav {
+  height: 100px;
+  background-color: #cccc00;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  a {
+    border: none;
+  }
+}
