--- a/styles/newResource.scss
+++ b/styles/newResource.scss
@@ -38,3 +38,15 @@ h3 {
     display: flex;
     justify-content: center;
 }
+
+nav {
+  height: 100px;
+  background-color: #cccc00;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  a {
+    border: none;
+  }
+}
