--- a/styles/resources.scss
+++ b/styles/resources.scss
@@ -46,3 +46,15 @@ body {
 	border: black solid 3px;
 	height: 45px;
 }
+
+nav {
+  height: 100px;
+  background-color: #cccc00;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  a {
+    border: none;
+  }
+}
