--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -45,6 +45,14 @@
             </button>
         </form>
       </div>
+      <div>
+        <form method="GET" action="/api/resources">
+          <button
+                    type="submit">
+                Resouces
+            </button>
+        </form>
+      </div>
 
 
     <% } else{ %>  <a style="text-decoration: none"  href="http://localhost:8080/api/register">Go Here to Register</a>
