--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,7 +16,7 @@
 
   <body>
 
-    <%- include('partials/_header', {userEmail: null}) %>
+    <%- include('partials/_header', {user: null}) %>
 
     <main style="margin: 1em;">
       <h2>
