make 6 changes on icons, removing comments from details, fix comments duplication, change header button order, redirect page to /resource after user login

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,10 +11,16 @@
               logout
           </button>
       </form>
-      <form method="GET" action="/api/topic_search">
+      <form method="GET" action="/api/profile">
         <button
                   type="submit">
-              Search by Topic
+              Profile
+          </button>
+      </form>
+      <form method="GET" action="/api/resources">
+        <button
+                  type="submit">
+              Resources
           </button>
       </form>
       <form method="GET" action="/api/my-resources">
@@ -29,12 +35,6 @@
               Create New
           </button>
       </form>
-      <form method="GET" action="/api/profile">
-        <button
-                  type="submit">
-              Profile
-          </button>
-      </form>
       </div>
 
       <div>
@@ -46,12 +46,12 @@
         </form>
       </div>
       <div>
-        <form method="GET" action="/api/resources">
-          <button
-                    type="submit">
-                Resouces
-            </button>
-        </form>
+        <form method="GET" action="/api/topic_search"></form>
+        <button
+                  type="submit">
+              Search by Topic
+          </button>
+      </form>
       </div>
 
 
