--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -28,7 +28,7 @@
       <section class="header-content">
          <h1>Welcome</h1>
         <p> Resource Wall is your personalized library,<br>
-           storing your resources designed to make your life easier.</p>
+           storing your digital resources designed to make your life easier.</p>
   </header>
 
 
