--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -14,7 +14,7 @@
     <% for (const item of data) {%>
     <section class="resource-section">
         <div class="post-header">
-            <div>Owner-name: <%= item.name%> </div>
+            <div>Created By: <%= item.name%> </div>
             <div> Category: <%=item.topic%></div>
         </div>
         <div class="body-div">
