fix jqury complic issue

--- a/styles/resourceShow.scss
+++ b/styles/resourceShow.scss
@@ -49,6 +49,7 @@ h3 {
 .tweets{
     border: black solid 2px;
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -61,6 +62,7 @@ h3 {
 .tweets-header{
     width: 850px;
     display: flex;
+    position: relative;
     justify-content: space-between;
 }
 .text{
