fix one more ahref issue

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -46,7 +46,7 @@
         </form>
       </div>
       <div>
-        <form method="GET" action="/api/topic_search"></form>
+        <form method="GET" action="/api/topic_search">
         <button
                   type="submit">
               Search by Topic
